# sickcamera

./: .gitignore  HARDWARE.md  README-CHINA.md  README.md
docs/: index.html
software/: .env.example  pyproject.toml  requirements.txt
software/data/: prompts.json
software/deploy/: 99-imagegencam-hw.rules  imagegencam-boot-splash.service  imagegencam-nmcli.sudoers  imagegencam.service
software/scripts/: button_test.py  display_test.py  gateway_test.py  hotshoe_test.py  install_service.sh  setup.sh  setup_venv.sh  show_boot_splash.py
software/src/imagegencam/: config.py  controller.py  openai_client.py  opi_hw.py  st7796.py  sunxi_gpio.py  web.py  wifi_manager.py
software/tests/: test_openai_client.py  test_opi_hw.py  test_web.py
